config/monitoring-setup/prometheus/prometheus-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: prometheus-service
spec:
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: http
      protocol: TCP
      name: http
  selector:
    prometheus: khaled
