config/monitoring-setup/prometheus/sidecar-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: side-car
  # annotations:
  #   # metallb.universe.tf/address-pool: nginx
  #   # metallb.universe.tf/ip-allocated-from-pool: nginx
  #   # metallb.universe.tf/allow-shared-ip: "nginx"
spec:
  # clusterIP: None
  type: LoadBalancer
  ports:
    - port: 10901
      targetPort: grpc
      protocol: TCP
      name: grpc
  selector:
    app.kubernetes.io/name: prometheus
