config/monitoring-setup/prometheus/sidecar-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: khaled
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/grpc-backend: "true"
    nginx.ingress.kubernetes.io/protocol: "h2c"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "160"
spec:
  ingressClassName: nginx
  rules:
    - host: "workload-4.monitoring.onesource.pt"
      http:
        paths:
          - backend:
              service:
                name: side-car
                port:
                  number: 10901
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - sidecar.monitoring.onesource.pt
      secretName: sidecar-tls-new
